# bp-maplestory

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
backend/: .env.example  main.py  pyproject.toml
backend/api/: router.py
backend/api/routes/: health.py
backend/core/: config.py
infra/: .env.example  docker-compose.yml
ingestion/: pipeline.py  pyproject.toml
ingestion/.dlt/: config.toml  secrets.toml.example
ingestion/pipelines/: nexon_pipeline.py
ingestion/sources/nexon/: __init__.py  helpers.py  settings.py
transformation/: dbt_project.yml  profiles.yml.example  pyproject.toml
transformation/macros/: generate_schema_name.sql
transformation/models/staging/: _sources.yml  _stg__models.yml  _stg__sources.yml  stg_example.sql  stg_nexon__character_ability.sql  stg_nexon__character_basic.sql  stg_nexon__character_cash_item_equipment.sql  stg_nexon__character_hyper_stat.sql  stg_nexon__character_item_equipment.sql  stg_nexon__character_list.sql  stg_nexon__character_popularity.sql  stg_nexon__character_propensity.sql  stg_nexon__character_set_effect.sql  stg_nexon__character_stat.sql  stg_nexon__character_symbol_equipment.sql  stg_nexon__user_achievement.sql
