[project]
name = "ingestion"
version = "0.1.0"
description = "Maplestory data ingestion — extract + load with dlt."
requires-python = ">=3.13"
dependencies = [
    "dlt[postgres]>=1.28.2",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "dlt[hub]>=1.28.2",
    "ibis-framework>=12.0.0",
    "marimo>=0.23.14",
    "numpy>=2.5.1",
    "pyarrow>=25.0.0",
]
